--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       body { 
         font-family: 'Battambang', 'Inter', sans-serif; 
         background-color: var(--bg-body);
-        color: #1e293b;
+        color: #334155;
         -webkit-font-smoothing: antialiased;
       }
       
@@ -39,12 +39,12 @@
 
       /* Card Press Effect */
       .pc-card { transition: transform 0.1s ease, box-shadow 0.2s ease; }
-      .pc-card:active { transform: scale(0.96); }
+      .pc-card:active { transform: scale(0.95); }
 
       /* Input Focus */
       .custom-input:focus {
-        border-color: #4f46e5;
-        box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.1);
+        border-color: #6366f1;
+        box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
       }
     </style>
   </head>
